[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cdiscbuilder"
version = "0.1.8"
description = "A package to convert ODM XML to SDTM/ADaM Datasets"
authors = [{name = "Ming-Chun Chen", email = "hellomingchun@gmail.com"}]
dependencies = [
    "pandas",
    "pyyaml"
]
requires-python = ">=3.8"

[project.scripts]
cdisc-sdtm = "cdiscbuilder.cli:main"

[tool.setuptools.package-data]
cdiscbuilder = ["specs/*.yaml", "engine/classes/*.py"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
ignore_missing_imports = true

